# split-into-kmers

./: .gitignore  Cargo.toml  output
src/: cli.yaml  main.rs
