[package]
name = "split-into-kmers"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.9"
clap = {version = "2.33", features = ["yaml", "suggestions", "color"]}
indicatif = "0.11.0"
